# amazon-memorydb-for-redis-samples

./: .gitignore  README.md
blogs/SimilaritySearch/SimilaritySearch/: PQA-semanticsearch.ipynb
blogs/introducing-amazon-memorydb-for-redis/: .gitignore  README.md
blogs/introducing-amazon-memorydb-for-redis/src/: .env.example  .gitignore  requirements.txt  server.py
blogs/optimizing-gen-ai-apps-with-durable-semantic-cache/: .gitignore  README.md
blogs/optimizing-gen-ai-apps-with-durable-semantic-cache/terraform/: checkov_scan_result.txt  (+3 more)
devops/typescript/: .gitignore
turorials/langchain-memorydb/: pyproject.toml
turorials/langchain-memorydb/langchain_memorydb/: __init__.py  base.py
turorials/langchain-memorydb/samples/: test_langchain_memorydb_vectorstore.ipynb
tutorials/ContextEngineering/: README.md  chatbot_app.py  chatbot_lib.py  requirements.txt  sampledata.json
tutorials/DurableSemanticCaching/: DurableSCwithFilter.ipynb
tutorials/SemanticCaching/: DurableSCwithFilter.ipynb  README.md
tutorials/SimilaritySearch/: PQA-semanticsearch.ipynb  README.md  requirements.txt
tutorials/cross-region-memorydb-vector-search/: readme.md  requirements.txt
tutorials/fraud-detection/: README.md  env.txt  real-time-fraud-detection.ipynb  real-time-fraud-detectoin.ipynb
tutorials/langchain-memorydb/: README.md
tutorials/memorydb-rag/: .env.example  .gitignore  README.md  ragmm_app.py  ragmm_lib.py  requirements.txt
tutorials/memorydb-vss-recommendations/: MemoryDB-VSS-Recommendations.ipynb
tutorials/rag-with-amazon-bedrock-and-memorydb/: README.md
(+28 files in other folders)
