[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain_memorydb"
version = "0.0.1"
description = "MemoryDB vector store integration with LangChain."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "langchain==0.0.335",
    "redis"
]

[project.urls]
"Homepage" = "https://gitlab.aws.dev/langchain/langchain-memorydb"
"Bug Tracker" = "https://gitlab.aws.dev/langchain/langchain-memorydb/-/issues"

[tool.setuptools]
packages = ["langchain_memorydb"]
